RT-17626: Restore Ari Kahn

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -725,6 +725,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/ari-kahn">Kahn, Ari</a></td>
+			<td>
+				<a href="mailto:akahn@tacc.utexas.edu">akahn@tacc.utexas.edu</a></td>
+			<td>
+				Life Sciences Computing</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/shein-kim">Kim, Shein</a></td>
 			<td>
 				<a href="mailto:skim@tacc.utexas.edu">skim@tacc.utexas.edu</a></td>
