Quick: Update wtcs/cert from CMS

--- a/content/education/EPIC/WeTeach_CS/certification--content.html
+++ b/content/education/EPIC/WeTeach_CS/certification--content.html
@@ -187,14 +187,22 @@ Style guide: components.weteachcs.cta
 	<p>
 		The CS 8-12 Test 241 covers four domains. (Scoring weight indicated below.)</p>
 	<dl>
-		<dt>Domain I – Technology Applications Core <small>(12.5%)</small></dt>
-			<dd>Understand how to use applications, data, networks, and the Internet to complete simple tasks and large projects.</dd>
-		<dt>Domain II – Program Design and Development <small>(35%)</small></dt>
-			<dd>Understand how to design and plan coding efforts.</dd>
-		<dt>Domain III – Programming Language Topics <small>(40%)</small></dt>
-			<dd>Write code using data, data types, arrays, loops, control structures, and data structures.</dd>
-		<dt>Domain IV – Specialized Topics <small>(12.5%)</small></dt>
-			<dd>This section covers advanced topics such as robotics, digital forensics, discrete math, and game design.</dd>
+		<dt>
+			Domain I – Technology Applications Core <small>(12.5%)</small></dt>
+		<dd>
+			Understand how to use applications, data, networks, and the Internet to complete simple tasks and large projects.</dd>
+		<dt>
+			Domain II – Program Design and Development <small>(35%)</small></dt>
+		<dd>
+			Understand how to design and plan coding efforts.</dd>
+		<dt>
+			Domain III – Programming Language Topics <small>(40%)</small></dt>
+		<dd>
+			Write code using data, data types, arrays, loops, control structures, and data structures.</dd>
+		<dt>
+			Domain IV – Specialized Topics <small>(12.5%)</small></dt>
+		<dd>
+			This section covers advanced topics such as robotics, digital forensics, discrete math, and game design.</dd>
 	</dl>
 	<h4>
 		Prepare</h4>
@@ -237,7 +245,7 @@ Style guide: components.weteachcs.cta
 	<h4>
 		Professional Development and Curriculum</h4>
 	<p>
-		WeTeach_CS offers online and in-person trainings to prepare for the certification exam.</p>
+		WeTeach_CS offers online and in-person trainings to prepare for the certification exam. We also encourage new CS teachers to apply for participation in the <a href="https://www.microsoft.com/en-us/teals">TEALS</a> program. This program, supported by Microsoft Philanthropies, connects classroom teachers with tech-industry volunteers to create sustainable CS programs. Volunteers support teachers as they learn to teach CS independently over time. It is FREE to schools.</p>
 	<h5>
 		Online</h5>
 	<h6>
