RT-17641: Update form URL, Change a Heading Text

--- a/content/education/EPIC/WeTeach_CS/certification--content.html
+++ b/content/education/EPIC/WeTeach_CS/certification--content.html
@@ -177,7 +177,7 @@ Style guide: components.weteachcs.cta
 		Earn a $1000 Stipend!</h4>
 	<p>
 		WeTeach_CS manages the Certification Incentive Program (CIP) that provides a $1000 stipend for Texas teachers who pass the CS 8-12 Test and obtain TEA CS certification. Hopefully, the stipend will help motivate you in your studies, and it will be a nice reward for your hard work! Instructions for applying for the stipend including eligibility, deadlines, and requirements are located lower on this page. Applications for the incentive program are due before testing.</p>
-	<a class="weteachcs-cta" href="https://docs.google.com/a/utexas.edu/forms/d/e/1FAIpQLSctXdJK002De1yTrTu1Ub0K7vyl0rYjEevfouJpRqbs7S9HcQ/viewform" target="_blank">Apply for $1,000 Stipend Here</a>
+	<a class="weteachcs-cta" href="https://docs.google.com/forms/d/e/1FAIpQLSdBWFxoo61Q3-4DMHNL-Ua_fWSNlVEOz8AvaetybJpXJBZtHg/viewform" target="_blank">Apply for $1,000 Stipend Here</a>
 	<h4>
 		Learn About CS Certification</h4>
 	<p>
@@ -275,7 +275,7 @@ Style guide: components.weteachcs.cta
 	<p>
 		The WeTeach_AP®CSA curriculum is aligned with new College Board CED (Course Exam Description) for Computer Science "A". Each module is structured around objectives that provide context and relevance for you and your students. Designed with teachers in mind, WeTeach_AP®CSA offers professional support through an online help desk, virtual office hours with the course developers, and forums for peer to peer collaboration on the curriculum.</p>
 	<h4>
-		Sponsors</h4>
+		Supported by:</h4>
 	<p>
 		<img alt="100Kin10, Microsoft, SFE" class="img-responsive" src="/documents/1084364/1750990/sponsors.png/" /></p>
 </section>
