--- a/content/education/EPIC/WeTeach_CS/certification/cip-checklist--content.html
+++ b/content/education/EPIC/WeTeach_CS/certification/cip-checklist--content.html
@@ -1,12 +1,10 @@
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
-    - `epic/research/presentations-and-publications`
-    - `epic/weteachcs/about`
-    - `epic/weteachcs/about/projects`
-    - `epic/weteachcs/certification`
-    - `epic/weteachcs/goals-and-outcomes`
-    - `epic/funders-and-project-partners`
+		- `epic/weteachcs/about`
+		- `epic/weteachcs/about/projects`
+		- `epic/weteachcs/certification`
+		- `epic/weteachcs/goals-and-outcomes`
 */
 /*
 WeTeach CS - Content (would be a `s-` i.e. "Scope" namespace)
@@ -160,7 +158,8 @@ Style guide: components.weteachcs
 		<li>
 			Once the stipend is processed, you will receive a check within 2-3 weeks.</li>
 	</ul>
-	<p>Available course dates and registration info can be found on the <a href="https://utakeit.tacc.utexas.edu/events/">UTakeIT In-Person courses page</a>.<p>
+	<p>
+		Available course dates and registration info can be found on the <a href="https://utakeit.tacc.utexas.edu/events/">UTakeIT In-Person courses page</a>.</p>
 	<h4>
 		Finding a CS Teaching Job</h4>
 	<p>
