RT-17641: Update form link, Bold link

--- a/content/education/EPIC/WeTeach_CS/certification/cip-checklist--content.html
+++ b/content/education/EPIC/WeTeach_CS/certification/cip-checklist--content.html
@@ -87,7 +87,7 @@ Style guide: components.weteachcs
 	<h4>
 		STEP 4: Complete CIP Application Form</h4>
 	<p>
-		Complete the <a href="https://forms.gle/V6X2eXUyzP1KvF6dA" target="_blank">CIP Application Form online</a>. Note that this form will ask you to specify your current teaching status and your Testing Window.</p>
+		Complete the <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSdBWFxoo61Q3-4DMHNL-Ua_fWSNlVEOz8AvaetybJpXJBZtHg/viewform" target="_blank">CIP Application Form online</a></strong>. Note that this form will ask you to specify your current teaching status and your Testing Window.</p>
 	<h4>
 		STEP 5: Deliver CIP Documentation</h4>
 	<p>
