RT-17580: Add staff, Miriam Jacobson

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -685,6 +685,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/miriam-jacobson">Jacobson, Miriam</a></td>
+			<td>
+				<a href="mailto:mjacobson@tacc.utexas.edu">mjacobson@tacc.utexas.edu</a></td>
+			<td>
+				Expanding Pathways in Computing (EPIC)</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/owais-jamil">Jamil, Owais</a></td>
 			<td>
 				<a href="mailto:ojamil@tacc.utexas.edu">ojamil@tacc.utexas.edu</a></td>
