RT-17560: Change content; Delete old, Add new CSS

--- a/content/education/EPIC/WeTeach_CS/certification--content.html
+++ b/content/education/EPIC/WeTeach_CS/certification--content.html
@@ -144,6 +144,7 @@ Style guide: components.weteachcs.card
         - `epic/weteachcs`
         - `epic/weteachcs/certification`
         - `epic/weteachcs/goals-and-outcomes`
+        - `epic/weteachcs/code.org`
 */
 /*
 WeTeach CS - Call to Action (CTA)
