--- a/content/education/EPIC/WeTeach_CS/code-org--content.html
+++ b/content/education/EPIC/WeTeach_CS/code-org--content.html
@@ -1,9 +1,30 @@
-<style type="text/css">
-.cyber-box {	
-	background-color: #333333;
-	color: #ffffff;
-	padding: 20px;
-	margin:30px 0px 20px 0px;
+<style id="style--weteachcs-cta" type="text/css">
+/* TODO: Use this component instead of `style` tags */
+/* WARN: Duplicated in:
+        - `epic/research/presentations-and-publications`
+        - `epic/weteachcs`
+        - `epic/weteachcs/certification`
+        - `epic/weteachcs/goals-and-outcomes`
+        - `epic/weteachcs/code.org`
+*/
+/*
+WeTeach CS - Call to Action (CTA)
+
+A callout to suggest the user perform some action.
+
+Markup:
+<section>
+    <p>Description of a great opportunity</p>
+    <a class="weteachcs-cta"  data-cke-saved-href="…" href="…" target="_blank">Apply for this oppportunity!</a>
+</section>
+
+Style guide: components.weteachcs.cta
+*/
+.weteachcs-cta {
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+    font-variant: small-caps;
 }</style>
 <h3>
 	Code.org</h3>
@@ -36,11 +57,13 @@
 	CS Discoveries</h4>
 <p>
 	Computer Science Discoveries is appropriate for 6-10th-grade students and can be taught as a semester or year-long introductory course (3-5 hours per week of instruction for 9+ weeks). The course takes a wide lens on computer science by covering topics such as programming, physical computing, HTML/CSS, and data. The course inspires students as they build their own websites, apps, games, and physical computing devices.</p>
+<p>
+	<a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-2020-CSD-5day/" target="_blank">Apply Here</a><p>
 <h4 style="margin-top:20px;">
 	CS Principles</h4>
 <p>
 	Computer Science Principles introduces students to the foundational concepts of computer science and challenges them to explore how computing and technology can impact the world. More than a traditional introduction to programming, it is a rigorous, engaging, and approachable course that explores many of the foundational ideas of computing so all students understand how these concepts are transforming the world we live in.</p>
 <p>
 	If you are interested in either of these courses please fill out the Code.org application to participate in the 2019-20 cohort.</p>
-<h5>
-	<b><a href="https://code.org/educate/professional-learning/program-information?partner=35" target="_blank">APPLY HERE</a></b></h5>
+<p>
+	<a class="weteachcs-cta" href="https://utakeit.tacc.utexas.edu/Code-org-2020-CSP-5day/" target="_blank">Apply Here</a><p>
