RT-17560: Code.org Update

--- a/content/education/EPIC/WeTeach_CS/about/projects--content.html
+++ b/content/education/EPIC/WeTeach_CS/about/projects--content.html
@@ -7,12 +7,13 @@
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
     /* WARN: Duplicated in:
-                - `epic/research/presentations-and-publications`
-                - `epic/weteachcs/about`
-                - `epic/weteachcs/about/projects`
-                - `epic/weteachcs/certification`
-                - `epic/weteachcs/goals-and-outcomes`
-                - `epic/funders-and-project-partners`
+            - `epic/research/presentations-and-publications`
+            - `epic/weteachcs/about`
+            - `epic/weteachcs/about/projects`
+            - `epic/weteachcs/certification`
+            - `epic/weteachcs/goals-and-outcomes`
+            - `epic/funders-and-project-partners`
+            - `epic/code.org`
     */
         /*
         WeTeach CS - Content (would be a `s-` i.e. "Scope" namespace)
@@ -64,6 +65,7 @@
         - `epic/weteachcs`
         - `epic/weteachcs/certification`
         - `epic/weteachcs/goals-and-outcomes`
+        - `epic/weteachcs/code.org`
 */
     /*
     WeTeach CS - Card
