--- a/content/education/EPIC/WeTeach_CS/certification--content.html
+++ b/content/education/EPIC/WeTeach_CS/certification--content.html
@@ -10,12 +10,13 @@ dfn { font-style: normal; }</style>
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
-    - `epic/research/presentations-and-publications`
-    - `epic/weteachcs/about`
-    - `epic/weteachcs/about/projects`
-    - `epic/weteachcs/certification`
-    - `epic/weteachcs/goals-and-outcomes`
-    - `epic/funders-and-project-partners`
+		- `epic/research/presentations-and-publications`
+		- `epic/weteachcs/about`
+		- `epic/weteachcs/about/projects`
+		- `epic/weteachcs/certification`
+		- `epic/weteachcs/goals-and-outcomes`
+		- `epic/funders-and-project-partners`
+		- `epic/code.org`
 */
 /*
 WeTeach CS - Content (would be a `s-` i.e. "Scope" namespace)
@@ -67,6 +68,7 @@ Style guide: components.weteachcs
         - `epic/weteachcs`
         - `epic/weteachcs/certification`
         - `epic/weteachcs/goals-and-outcomes`
+        - `epic/weteachcs/code.org`
 */
 /*
 WeTeach CS - Card
