--- a/content/education/EPIC/WeTeach_CS/certification/cip-checklist--content.html
+++ b/content/education/EPIC/WeTeach_CS/certification/cip-checklist--content.html
@@ -1,10 +1,13 @@
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
+		- `epic/research/presentations-and-publications`
 		- `epic/weteachcs/about`
 		- `epic/weteachcs/about/projects`
 		- `epic/weteachcs/certification`
 		- `epic/weteachcs/goals-and-outcomes`
+		- `epic/funders-and-project-partners`
+		- `epic/code.org`
 */
 /*
 WeTeach CS - Content (would be a `s-` i.e. "Scope" namespace)
