--- a/content/education/EPIC/WeTeach_CS/goals-and-outcomes--content.html
+++ b/content/education/EPIC/WeTeach_CS/goals-and-outcomes--content.html
@@ -7,12 +7,13 @@
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
-            - `epic/research/presentations-and-publications`
-            - `epic/weteachcs/about`
-            - `epic/weteachcs/about/projects`
-            - `epic/weteachcs/certification`
-            - `epic/weteachcs/goals-and-outcomes`
-            - `epic/funders-and-project-partners`
+        - `epic/research/presentations-and-publications`
+        - `epic/weteachcs/about`
+        - `epic/weteachcs/about/projects`
+        - `epic/weteachcs/certification`
+        - `epic/weteachcs/goals-and-outcomes`
+        - `epic/funders-and-project-partners`
+        - `epic/code.org`
 */
     /*
     WeTeach CS - Content (would be a `s-` i.e. "Scope" namespace)
@@ -60,10 +61,11 @@
 <style id="style--weteachcs-card" type="text/css">
 /* TODO: Use this component instead of `style` tags */
 /* WARN: Duplicated in:
-            - `epic/weteachcs/about/projects`
-            - `epic/research/presentations-and-publications`
-            - `epic/weteachcs`
-            - `epic/weteachcs/goals-and-outcomes`
+        - `epic/weteachcs/about/projects`
+        - `epic/research/presentations-and-publications`
+        - `epic/weteachcs`
+        - `epic/weteachcs/goals-and-outcomes`
+        - `epic/weteachcs/code.org`
 */
     /*
     WeTeach CS - Card
