--- a/content/education/EPIC/funders-and-project-partners--content.html
+++ b/content/education/EPIC/funders-and-project-partners--content.html
@@ -1,12 +1,13 @@
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
-            - `epic/research/presentations-and-publications`
-            - `epic/weteachcs/about`
-            - `epic/weteachcs/about/projects`
-            - `epic/weteachcs/certification`
-            - `epic/weteachcs/goals-and-outcomes`
-            - `epic/funders-and-project-partners`
+        - `epic/research/presentations-and-publications`
+        - `epic/weteachcs/about`
+        - `epic/weteachcs/about/projects`
+        - `epic/weteachcs/certification`
+        - `epic/weteachcs/goals-and-outcomes`
+        - `epic/funders-and-project-partners`
+        - `epic/code.org`
 */
 /*
 WeTeach CS - Content (would be a `s-` i.e. "Scope" namespace)
@@ -57,6 +58,7 @@ Style guide: components.weteachcs
                     - `epic/research/presentations-and-publications`
                     - `epic/weteachcs`
                     - `epic/weteachcs/goals-and-outcomes`
+                    - `epic/weteachcs/code.org`
         */
             /*
             WeTeach CS - Card
