RT-17662: Update comments of styles on pages

--- a/content/education/EPIC/WeTeach_CS/about--content.html
+++ b/content/education/EPIC/WeTeach_CS/about--content.html
@@ -3,6 +3,7 @@
     <style id="style--weteachcs-content" type="text/css">
     /* TODO: Use this scope instead of `style` tags */
     /* WARN: Duplicated in:
+            - `epic`
             - `epic/research/presentations-and-publications`
             - `epic/weteachcs/about`
             - `epic/weteachcs/about/projects`
