--- a/content/education/EPIC/WeTeach_CS/certification--content.html
+++ b/content/education/EPIC/WeTeach_CS/certification--content.html
@@ -10,6 +10,7 @@ dfn { font-style: normal; }</style>
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
+		- `epic`
 		- `epic/research/presentations-and-publications`
 		- `epic/weteachcs/about`
 		- `epic/weteachcs/about/projects`
@@ -64,6 +65,7 @@ Style guide: components.weteachcs
 <style id="style--weteachcs-card" type="text/css">
 /* TODO: Use this component instead of `style` tags */
 /* WARN: Duplicated in:
+        - `epic`
         - `epic/research/presentations-and-publications`
         - `epic/weteachcs`
         - `epic/weteachcs/certification`
