--- a/content/education/EPIC/weteach_cs--content.html
+++ b/content/education/EPIC/weteach_cs--content.html
@@ -1,9 +1,10 @@
 <style id="style--weteachcs-card" type="text/css">
 /* TODO: Use this component instead of `style` tags */
         /* WARN: Duplicated in:
-                    - `epic/research/presentations-and-publications`
-                    - `epic/weteachcs`
-                    - `epic/weteachcs/goals-and-outcomes`
+                - `epic`
+                - `epic/research/presentations-and-publications`
+                - `epic/weteachcs`
+                - `epic/weteachcs/goals-and-outcomes`
         */
             /*
             WeTeach CS - Card
