--- a/content/education/EPIC/funders-and-project-partners--content.html
+++ b/content/education/EPIC/funders-and-project-partners--content.html
@@ -1,6 +1,7 @@
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
+        - `epic`
         - `epic/research/presentations-and-publications`
         - `epic/weteachcs/about`
         - `epic/weteachcs/about/projects`
@@ -55,6 +56,7 @@ Style guide: components.weteachcs
 <style id="style--weteachcs-card" type="text/css">
 /* TODO: Use this component instead of `style` tags */
         /* WARN: Duplicated in:
+                    - `epic`
                     - `epic/research/presentations-and-publications`
                     - `epic/weteachcs`
                     - `epic/weteachcs/goals-and-outcomes`
