--- a/content/home--events-and-training.html
+++ b/content/home--events-and-training.html
@@ -27,9 +27,7 @@
 			March 4<br />
 			Houston, TX</p>
 	</div>
-</div>-->
-<!-- !!!: Course Expired — added too late, by Wesley B, on 2020-03-10 -->
-<!--
+</div>--><!-- !!!: Course Expired — added too late, by Wesley B, on 2020-03-10 --><!--
 <div class="row">
 	<div class="col-xs-3">
 		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=84" target="_blank"><img alt="Workshop on Artificial Intelligence in Natural Hazards Engineering" class="img-responsive" src="/documents/1084364/1694621/tacc-learning-portal.jpg" style="margin-bottom:10px;" /></a></div>
@@ -47,8 +45,6 @@
 	<div class="col-xs-9">
 		<p>
 			<a href="https://www.sighpc.org/for-our-community/computing4change" target="_blank">Computing4Change Competition Deadline</a><br />
-			Application Deadline:
-			<time>May 18, 2020</time>
-		</p>
+			Application Deadline: May 18, 2020</p>
 	</div>
 </div>
