RT-17694: Update Events & Training, WIP formatting

--- a/content/home--events-and-training.html
+++ b/content/home--events-and-training.html
@@ -3,11 +3,35 @@
 <br />
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://www.sighpc.org/for-our-community/computing4change" target="_blank"><img alt="SigHPC Logo" class="img-responsive" src="/documents/1084364/1825988/sighpc.png" style="margin-bottom:10px;" /></a></div>
+		<a href="https://www.tacc.utexas.edu/education/institutes/ace" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/advanced-coputing-essentials.jpg" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://www.sighpc.org/for-our-community/computing4change" target="_blank">Computing4Change Competition Deadline</a><br />
-			Application Deadline: May 18, 2020</p>
+			<a href="https://www.tacc.utexas.edu/education/institutes/ace" target="_blank">
+				<strong>Advanced Computing Essentials</strong></a><br />
+				June 9–11<br />
+				Interactive Webcast</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://www.tacc.utexas.edu/education/institutes/applied-parallel-programming" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/applied-parallel-programming.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.tacc.utexas.edu/education/institutes/applied-parallel-programming" target="_blank">
+				<strong>Computational Research Techniques:</strong><br />
+				Applied Parallel Programming</a><br />
+				June 7—10</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://www.tacc.utexas.edu/education/institutes/scientific-visualization" style="margin-bottom:10px;" /><img class="img-responsive" src="/documents/1084364/1825988/scientific+vizualization.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.tacc.utexas.edu/education/institutes/scientific-visualization" target="_blank">
+				<strong>Computational Research Techniques:</strong><br />
+				Scientific Visualization</a><br />
+				June 7—10</p>
 	</div>
 </div>
 <!--<div class="row">
