Quick: FIx date range char (last last commit)

--- a/content/home--events-and-training.html
+++ b/content/home--events-and-training.html
@@ -8,7 +8,7 @@
 		<p>
 			<a href="https://www.tacc.utexas.edu/education/institutes/ace" target="_blank">
 				<strong>Advanced Computing Essentials</strong></a><br />
-				June 9–11<br />
+				June 9—11<br />
 				Interactive Webcast</p>
 	</div>
 </div>
