--- a/content/home--training-and-events.html
+++ b/content/home--training-and-events.html
@@ -8,8 +8,8 @@
 		<p>
 			<a href="https://www.tacc.utexas.edu/education/institutes/ace" target="_blank">
 				<strong>Advanced Computing Essentials</strong></a><br />
-				June 9—11<br />
-				Interactive Webcast</p>
+				Interactive Webcast<br />
+				June 9—11</p>
 	</div>
 </div>
 <div class="row">
