RT-17680: Add missing entries to staff dir

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -1117,6 +1117,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/jan-sandoval">Sandoval, Janet</a></td>
+			<td>
+				<a href="mailto:jsandoval@tacc.utexas.edu">jsandoval@tacc.utexas.edu</a></td>
+			<td>
+				Network, Security, Operations</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/pat-scherer">Scherer, Pat</a></td>
 			<td>
 				<a href="mailto:pscherer@tacc.utexas.edu">pscherer@tacc.utexas.edu</a></td>
@@ -1368,6 +1376,14 @@
 				<a href="mailto:john@tacc.utexas.edu">john@tacc.utexas.edu</a></td>
 			<td>
 				Strategic Initiatives</td>
+		</tr>
+		<tr>
+			<td>
+				<a href="/web/website/about/directory/kathy-weese">Weese, Kathy</a></td>
+			<td>
+				<a href="mailto:kweese@tacc.utexas.edu">kweese@tacc.utexas.edu</a></td>
+			<td>
+				Networking, Security, Operations</td>
 		</tr>
 		<tr>
 			<td>
