Quick: Update EPIC Research to use shared styles

--- a/content/education/EPIC/WeTeach_CS/about--content.html
+++ b/content/education/EPIC/WeTeach_CS/about--content.html
@@ -4,6 +4,7 @@
     /* TODO: Use this scope instead of `style` tags */
     /* WARN: Duplicated in:
             - `epic`
+            - `epic/research`
             - `epic/research/presentations-and-publications`
             - `epic/weteachcs/about`
             - `epic/weteachcs/about/projects`
