--- a/content/education/EPIC/weteach_cs--content.html
+++ b/content/education/EPIC/weteach_cs--content.html
@@ -2,6 +2,7 @@
 /* TODO: Use this component instead of `style` tags */
         /* WARN: Duplicated in:
                 - `epic`
+                - `epic/research`
                 - `epic/research/presentations-and-publications`
                 - `epic/weteachcs`
                 - `epic/weteachcs/goals-and-outcomes`
