--- a/content/education/EPIC/WeTeach_CS/certification--content.html
+++ b/content/education/EPIC/WeTeach_CS/certification--content.html
@@ -11,6 +11,7 @@ dfn { font-style: normal; }</style>
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
 		- `epic`
+		- `epic/research`
 		- `epic/research/presentations-and-publications`
 		- `epic/weteachcs/about`
 		- `epic/weteachcs/about/projects`
@@ -66,6 +67,7 @@ Style guide: components.weteachcs
 /* TODO: Use this component instead of `style` tags */
 /* WARN: Duplicated in:
         - `epic`
+		- `epic/research`
         - `epic/research/presentations-and-publications`
         - `epic/weteachcs`
         - `epic/weteachcs/certification`
