--- a/content/education/EPIC/WeTeach_CS/certification/cip-checklist--content.html
+++ b/content/education/EPIC/WeTeach_CS/certification/cip-checklist--content.html
@@ -2,6 +2,7 @@
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
 		- `epic`
+		- `epic/research`
 		- `epic/research/presentations-and-publications`
 		- `epic/weteachcs/about`
 		- `epic/weteachcs/about/projects`
