--- a/content/education/EPIC/funders-and-project-partners--content.html
+++ b/content/education/EPIC/funders-and-project-partners--content.html
@@ -2,6 +2,7 @@
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
         - `epic`
+        - `epic/research`
         - `epic/research/presentations-and-publications`
         - `epic/weteachcs/about`
         - `epic/weteachcs/about/projects`
@@ -57,6 +58,7 @@ Style guide: components.weteachcs
 /* TODO: Use this component instead of `style` tags */
         /* WARN: Duplicated in:
                     - `epic`
+                    - `epic/research`
                     - `epic/research/presentations-and-publications`
                     - `epic/weteachcs`
                     - `epic/weteachcs/goals-and-outcomes`
