RT-17693: Note styles used by EPIC STEM pages

--- a/content/education/EPIC/WeTeach_CS/about--content.html
+++ b/content/education/EPIC/WeTeach_CS/about--content.html
@@ -4,6 +4,7 @@
     /* TODO: Use this scope instead of `style` tags */
     /* WARN: Duplicated in:
             - `epic`
+        - `epic/stem-evaluation-services`
             - `epic/research`
             - `epic/research/presentations-and-publications`
             - `epic/weteachcs/about`
@@ -49,9 +50,9 @@
         .weteachcs-content h5 {
             margin-top: 20px;
         }
-		.weteachcs-content dt {
-			display: list-item;
-		}
+        .weteachcs-content dt {
+            display: list-item;
+        }
         .weteachcs-content dt small {
             font-weight: normal;
             font-size: 100%;
