--- a/content/education/epic--content.html
+++ b/content/education/epic--content.html
@@ -2,7 +2,8 @@
 /* TODO: Use this scope instead of `style` tags */
 /* WARN: Duplicated in:
 		- `epic`
-        - `epic/research`
+		- `epic/stem-evaluation-services`
+		- `epic/research`
 		- `epic/research/presentations-and-publications`
 		- `epic/weteachcs/about`
 		- `epic/weteachcs/about/projects`
@@ -58,6 +59,7 @@ Style guide: components.weteachcs
 /* TODO: Use this component instead of `style` tags */
 /* WARN: Duplicated in:
         - `epic`
+        - `epic/stem-evaluation-services`
         - `epic/research`
         - `epic/research/presentations-and-publications`
         - `epic/weteachcs`
