--- a/content/education/EPIC/WeTeach_CS/about/projects--content.html
+++ b/content/education/EPIC/WeTeach_CS/about/projects--content.html
@@ -8,6 +8,7 @@
 /* TODO: Use this scope instead of `style` tags */
     /* WARN: Duplicated in:
             - `epic`
+            - `epic/stem-evaluation-services`
             - `epic/research`
             - `epic/research/presentations-and-publications`
             - `epic/weteachcs/about`
@@ -64,6 +65,7 @@
 /* TODO: Use this component instead of `style` tags */
 /* WARN: Duplicated in:
         - `epic`
+        - `epic/stem-evaluation-services`
         - `epic/research`
         - `epic/research/presentations-and-publications`
         - `epic/weteachcs`
