--- a/content/education/EPIC/research--content.html
+++ b/content/education/EPIC/research--content.html
@@ -2,6 +2,7 @@
 	/* TODO: Use this scope instead of `style` tags */
 	/* WARN: Duplicated in:
 			- `epic`
+			- `epic/stem-evaluation-services`
 			- `epic/research`
 			- `epic/research/presentations-and-publications`
 			- `epic/weteachcs/about`
@@ -58,6 +59,7 @@
 	/* TODO: Use this component instead of `style` tags */
 			/* WARN: Duplicated in:
 					- `epic`
+					- `epic/stem-evaluation-services`
 					- `epic/research`
 					- `epic/research/presentations-and-publications`
 					- `epic/weteachcs`
