RT-17693: Update "TEAM" on EPIC/Stem

--- a/content/education/EPIC/stem-evaluation-services--content.html
+++ b/content/education/EPIC/stem-evaluation-services--content.html
@@ -143,13 +143,15 @@
 		Team</h3>
 	<ul>
 		<li>
-			Lisa Garbrecht, Director of Evaluation Services</li>
+			<a href="/about/directory/lisa-garbrecht">Lisa Garbrecht</a>, Director of Evaluation Services</li>
 		<li>
-			Jayce Warner, Research Associate</li>
+			<a href="/about/directory/jayce-warner">Jayce Warner</a>, Research Associate</li>
 		<li>
-			Stephanie Baker, Research Associate</li>
+			<a href="/about/directory/stephanie-baker">Stephanie Baker</a>, Research Associate</li>
 		<li>
-			Nicole Martin, Research Associate</li>
+			<a href="/about/directory/nicole-martin">Nicole Martin</a>, Research Associate</li>
+		<li>
+			<a href="/about/directory/miriam-jacobson">Miriam Jacobson</a>, Research Associate</li>
 		<li>
 			Graduate Research Assistants</li>
 	</ul>
