Quick: Fix typo in last commit

--- a/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -295,7 +295,7 @@ th{
 						Willingness to learn</p>
 					<p>
 						UT EID for the Attendee<br />
-						<a href="https://idmanager.its.utexas.edu/eid_self_help/" title="UT EID Self-Service Tools" target="_blank">(get a <abbr title="University of Texas Electronic Identity">UT EID</abbr></a>)<br />
+						(<a href="https://idmanager.its.utexas.edu/eid_self_help/" title="UT EID Self-Service Tools" target="_blank">get a <abbr title="University of Texas Electronic Identity">UT EID</abbr></a>)<br />
 						(<a href="https://youtu.be/EePa27mGuGE" title="Creating a UT EID (YouTube video instructions)" target="_blank">video instructions</a>)</p>
 				</div>
 				<div class="col-md-4 col-sm-12" style="text-align:center;">
