RT-17661: Add linsk to forms

--- a/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -310,9 +310,9 @@ th{
 					<p>
 						<em>Release Forms:</em></p>
 					<p>
-						<a target="_blank">English</a> (awaiting links)</p>
+						<a href=" https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6aa21f10-26a2-4ccc-bb3c-0bb9ba4665f4&env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&v=2" target="_blank">Minors Required Documents</a><br />(17 years old and under)</p>
 					<p>
-						<a target="_blank">Español</a> (awaiting links)</p>
+						<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=5964ea9d-f8d1-45e4-a116-1e76b0512332&env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&v=2" target="_blank">Menores Requeridos Documentos</a><br />(17 años y menores)</p>
 				</div>
 				<div class="col-md-4 col-sm-12" style="text-align:center;">
 					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; padding:0px;">CAMP PROGRAM</h4>
