--- a/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -61,7 +61,7 @@ th{
 	font-size: 7em;
 }
 .connected-logo--minor {
-	font-size: 4em;
+	font-size: 3em;
 }
 
 .code-at-tacc-logo{
@@ -71,9 +71,7 @@ th{
 
 .camp-dates{
 	color:#039;
-	font-size: 2.75em;
-	margin-top: 0px;
-	/*padding-left: 30%;*/
+	font-size: 2em;
 	text-align: center;
 }
 
@@ -226,7 +224,7 @@ th{
 			<p>
 				Cybersecurity is the protection of internet-connected systems such as hardware, software and data from cyber-threats. The practice is used by individuals and enterprises to protect against unauthorized access to data centers and other computerized systems.</p>
 			<p>
-				All past TACC summer camp participants are welcome to register. There is no cost for training materials and exam. Coding experience is not required. Participants are expected to participate until the conclusion of the program. Sessions (instruction and review) are offered multiples during the week and will be recorded for your participation convenience.</p>
+				All past TACC summer camp participants are invited to register. There is no cost for training materials and exam. Coding experience is not required. Participants are expected to participate until the conclusion of the program. Sessions (instruction and review) are offered multiple times during the week and will be recorded for your participation convenience.</p>
 		</div>
 		<div class="col-md-6">
 			<p class="centered" style="font-size:small; color:#999; margin-top:0px; margin-bottom:30px;">
