RT-17661: Add "Funders" to comptia page

--- a/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -441,14 +441,90 @@ th{
 				<hr />
 			</div>
 		</div>
-		<div style="margin:50px 0px;padding: 0px;">
-			<h2 style="text-align: center;">
-				Related Links</h2>
+		<div class="row">
+			<div class="col-sm-12">
+				<h2 style="text-align:center; margin:75px 0px 25px 0px; padding:0px;">
+					Related Links</h2>
+				<div class="col-sm-6">
+					<a aria-label="Learn more about TACC's K-12 programs." href="https://www.tacc.utexas.edu/education/stem-programs" target="_blank"><img alt="Stem Programs - Educational Programs for Students K-12" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/K-12-Programs.jpg" /></a></div>
+				<div class="col-sm-6">
+					<a aria-label="An article about the 2017 CODE@TACC Connected Experience." href="https://www.tacc.utexas.edu/-/buildings-vs-earthquakes-high-school-students-learn-the-science" target="_blank"><img alt="Code at TACC: Connected-Experience Structural Engineering at UT" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DS-Banner.jpg" /></a></div>
+			</div>
 		</div>
-		<div class="col-sm-6">
-			<a aria-label="Learn more about TACC's K-12 programs." href="https://www.tacc.utexas.edu/education/stem-programs" target="_blank"><img alt="Stem Programs - Educational Programs for Students K-12" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/K-12-Programs.jpg" /></a></div>
-		<div class="col-sm-6">
-			<a aria-label="An article about the 2017 CODE@TACC Connected Experience." href="https://www.tacc.utexas.edu/-/buildings-vs-earthquakes-high-school-students-learn-the-science" target="_blank"><img alt="Code at TACC: Connected-Experience Structural Engineering at UT" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DS-Banner.jpg" /></a></div>
+
+		<style id="o-gallery-styles" type="text/css">
+		/*
+			Gallery (Object)
+	
+			A gallery of apps to launch, images to view, etc.
+	
+			Markup:
+			<ul class="o-gallery">
+				<li>…</li>
+				<li>…</li>
+			</ul>
+			*/
+			/* WARN: Duplicated in:
+				- `stem-programs/code-at-tacc/cybersecurity`
+				- `stem-programs/code-at-tacc/cybersecurity-comptia`
+				- `epic/funders-and-project-partners`
+			*/
+			.o-gallery {
+				--grid-gap: 30px;
+				--min-item-width: 300px;
+	
+				display: grid;
+				grid-gap: var(--grid-gap);
+				grid-template-columns: repeat(auto-fit, minmax(var(--min-item-width), 1fr));
+				justify-items: center;
+				align-items: center;
+			}	</style>
+		<style id="s-gallery-styles" type="text/css">
+			/*
+			Gallery (Scope)
+	
+			Styles often added for instances of `o-gallery`, but independent of `o-gallery` layout.
+			*/
+			/* WARN: Duplicated in:
+				- `stem-programs/code-at-tacc/cybersecurity`
+				- `stem-programs/code-at-tacc/cybersecurity-comptia`
+				- `epic/funders-and-project-partners`
+			*/
+			.s-gallery li {
+				list-style-type: none;
+			}
+		</style>
+		<style id="cybersecurity-unique-gallery-styles" type="text/css">
+			.o-gallery {
+				--grid-gap: 25px;
+				/* FAQ: This variable is borrowed from `.s-gallery` */
+				--min-item-width: var(--smallest-image-width);
+	
+				margin: 25px auto 0;
+			}
+			.s-gallery {
+				--smallest-image-width: 310px;
+				--smallest-image-height: 106px;
+			}
+			.s-gallery li > img {
+				max-width: var(--smallest-image-width);
+				max-height: var(--smallest-image-height);
+			}
+		</style>
+		<div class="row">
+			<div class="col-sm-12">
+				<h2 style="text-align:center; margin:75px 0px 25px 0px; padding:0px;">
+					Funding</h2>
+				<p style="text-align:center">
+					The camp was funded with the generosity from Cisco University Research Program Fund and Silicon Valley Community Foundation.</p>
+				<ul class="o-gallery  s-gallery">
+					<li>
+						<img alt="Silicon Valley Logo" src="/documents/1084364/1822769/silicon-valley-logo.png" /></li>
+					<li>
+						<img alt="CISCO Logo" src="/documents/1084364/1822769/cisco-logo-blue-2016.png" /></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </div>
 <!-- closing retro-body-wrapper -->
