--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -642,6 +642,7 @@ th{
 		*/
 		/* WARN: Duplicated in:
 			- `stem-programs/code-at-tacc/cybersecurity`
+			- `stem-programs/code-at-tacc/cybersecurity-comptia`
 			- `epic/funders-and-project-partners`
 		*/
 		.o-gallery {
@@ -662,6 +663,7 @@ th{
 		*/
 		/* WARN: Duplicated in:
 			- `stem-programs/code-at-tacc/cybersecurity`
+			- `stem-programs/code-at-tacc/cybersecurity-comptia`
 			- `epic/funders-and-project-partners`
 		*/
 		.s-gallery li {
