--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -628,8 +628,9 @@ th{
 			</ul>
 		</div>
 	</div>
+
 	<style id="o-gallery-styles" type="text/css">
-/*
+		/*
 		Gallery (Object)
 
 		A gallery of apps to launch, images to view, etc.
@@ -654,9 +655,10 @@ th{
 			grid-template-columns: repeat(auto-fit, minmax(var(--min-item-width), 1fr));
 			justify-items: center;
 			align-items: center;
-		}	</style>
+		}
+	</style>
 	<style id="s-gallery-styles" type="text/css">
-/*
+		/*
 		Gallery (Scope)
 
 		Styles often added for instances of `o-gallery`, but independent of `o-gallery` layout.
@@ -668,9 +670,10 @@ th{
 		*/
 		.s-gallery li {
 			list-style-type: none;
-		}	</style>
+		}
+	</style>
 	<style id="cybersecurity-unique-gallery-styles" type="text/css">
-.o-gallery {
+		.o-gallery {
 			--grid-gap: 25px;
 			/* FAQ: This variable is borrowed from `.s-gallery` */
 			--min-item-width: var(--smallest-image-width);
@@ -684,10 +687,11 @@ th{
 		.s-gallery li > img {
 			max-width: var(--smallest-image-width);
 			max-height: var(--smallest-image-height);
-		}	</style>
+		}
+	</style>
 	<div class="row">
 		<div class="col-sm-12">
-			<h2 id="aui_3_4_0_1_1282" style="text-align:center; margin:75px 0px 25px 0px; padding:0px;">
+			<h2 style="text-align:center; margin:75px 0px 25px 0px; padding:0px;">
 				Funding</h2>
 			<p style="text-align:center">
 				The camp was funded with the generosity from Cisco University Research Program Fund and Silicon Valley Community Foundation.</p>
