RT-17661: Quick: Tweak comptia page hr + close div

--- a/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -438,9 +438,9 @@ th{
 					<li>
 						Any bedroom attire is prohibited outside of the dorms; pajama tops or bottoms, slippers, etc...</li>
 				</ul>
-				<hr />
 			</div>
 		</div>
+		<hr />
 		<style id="o-gallery-styles" type="text/css">
 			/*
 			Gallery (Object)
@@ -515,6 +515,7 @@ th{
 				</ul>
 			</div>
 		</div>
+		<hr />
 		<div class="row">
 			<div class="col-sm-12">
 				<h2 style="text-align:center; margin:75px 0px 25px 0px; padding:0px;">
@@ -528,3 +529,5 @@ th{
 	</div>
 </div>
 <!-- closing retro-body-wrapper -->
+</div>
+<!-- extra div to break page in the same way as /cybersecurity which does NOT have extra padding at page bottom -->
