RT-17689: Add Nicola (Nikki) Hendricks

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -645,6 +645,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/nicola-hendricks">Hendricks, Nicola (Nikki)</a></td>
+			<td>
+				<a href="mailto:nhendricks@tacc.utexas.edu">nhendricks@tacc.utexas.edu</a></td>
+			<td>
+				Expanding Pathways in Computing (EPIC)</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/natalie-henriques">Henriques, Natalie</a></td>
 			<td>
 				<a href="mailto:natalie@tacc.utexas.edu">natalie@tacc.utexas.edu</a></td>
@@ -1435,5 +1443,3 @@
 		</tr>
 	</tbody>
 </table>
-<p>
-	&nbsp;</p>
