RT-17691: Add Christian Garcia (and add "(CIC)")

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -89,7 +89,7 @@
 			<td>
 				<a href="mailto:abarnes@tacc.utexas.edu">abarnes@tacc.utexas.edu</a></td>
 			<td>
-				Cloud &amp; Interactive Computing</td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -129,7 +129,7 @@
 			<td>
 				<a href="sblack@tacc.utexas.edu">sblack@tacc.utexas.edu</a></td>
 			<td>
-				Cloud &amp; Interactive Computing</td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -265,7 +265,7 @@
 			<td>
 				<a href="mailto:echalhoub@tacc.utexas.edu">echalhoub@tacc.utexas.edu</a></td>
 			<td>
-				Cloud &amp; Interactive Computing</td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -493,6 +493,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/christian-garcia">Garcia, Christian</a></td>
+			<td>
+				<a href="mailto:cgarcia@tacc.utexas.edu">cgarcia@tacc.utexas.edu</a></td>
+			<td>
+				Cloud &amp; Interactive Computing (CIC)</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/joe-garcia">Garcia, Joe</a></td>
 			<td>
 				<a href="mailto:jgarcia@tacc.utexas.edu">jgarcia@tacc.utexas.edu</a></td>
@@ -593,7 +601,7 @@
 			<td>
 				<a href="mailto:fhalbach@tacc.utexas.edu">fhalbach@tacc.utexas.edu</a></td>
 			<td>
-				<a name="H"></a> Cloud &amp; Interactive Computing</td>
+				<a name="H"></a> Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -601,7 +609,7 @@
 			<td>
 				<a href="mailto:hammock@tacc.utexas.edu">hammock@tacc.utexas.edu</a></td>
 			<td>
-				Cloud &amp; Interactive Computing</td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -705,7 +713,7 @@
 			<td>
 				<a href="mailto:ajamthe@tacc.utexas.edu">ajamthe@tacc.utexas.edu</a></td>
 			<td>
-				Cloud &amp; Interactive Computing</td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -761,7 +769,7 @@
 			<td>
 				<a href="mailto:bkuritz@tacc.utexas.edu">bkuritz@tacc.utexas.edu</a></td>
 			<td>
-				Cloud &amp; Interactive Computing</td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -825,7 +833,7 @@
 			<td>
 				<a href="mailto:jlooney@tacc.utexas.edu">jlooney@tacc.utexas.edu</a></td>
 			<td>
-				Cloud &amp; Interactive Computing</td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -969,7 +977,7 @@
 			<td>
 				<a href="mailto:mpackard@tacc.utexas.edu">mpackard@tacc.utexas.edu</a></td>
 			<td>
-				<a name="P"></a> Cloud &amp; Interactive Computing</td>
+				<a name="P"></a> Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -977,7 +985,7 @@
 			<td>
 				<a href="mailto:spadhy@tacc.utexas.edu">spadhy@tacc.utexas.edu</a></td>
 			<td>
-				Cloud &amp; Interactive Computing</td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
@@ -1239,7 +1247,7 @@
 			<td>
 				<a href="mailto:jstubbs@tacc.utexas.edu">jstubbs@tacc.utexas.edu</a></td>
 			<td>
-				Cloud &amp; Interactive Computing</td>
+				Cloud &amp; Interactive Computing (CIC)</td>
 		</tr>
 		<tr>
 			<td>
